--- a/css/services.css
+++ b/css/services.css
@@ -21,3 +21,15 @@
   font-size: 1.5rem;
   margin-bottom: 0.75rem
 }
+
+/* responsive */
+@media (min-width: 1200px) {
+  .cards {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .card {
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
+}
