--- a/css/footer.css
+++ b/css/footer.css
@@ -30,3 +30,20 @@ footer .social a {
 footer .social a:hover {
   transform: translateY(-8px);
 }
+
+/* responsive */
+@media (min-width: 1200px) {
+  footer.section {
+    padding: 3.75rem 0;
+  }
+
+  footer .container {
+    grid-auto-flow: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  footer .logo {
+    font-size: 2.25rem;
+  }
+}
