--- a/css/header.css
+++ b/css/header.css
@@ -27,6 +27,11 @@ nav ul li a {
   position: relative;
 }
 
+nav ul li a:hover,
+nav ul li a.active {
+  color: var(--base-color);
+}
+
 nav ul li a::after {
   content: '';
   width: 0%;
@@ -38,12 +43,9 @@ nav ul li a::after {
   transition: width 0.2s;
 }
 
-nav ul li a:hover::after {
+nav ul li a:hover::after,
+nav ul li a.active::after {
   width: 100%;
-}
-
-nav ul li a:hover {
-  color: var(--base-color);
 }
 
 nav .menu {
@@ -121,6 +123,12 @@ nav.show div.icon-close{
 
   nav .menu ul li a.title {
     font: 400 1rem var(--body-font);
+    -webkit-font-smoothing: antialiased;
+  }
+
+  nav .menu ul li a.active {
+    font-weight: bold;
+    -webkit-font-smoothing: auto;
   }
 
   nav .icon-menu {
