--- a/css/swiper.css
+++ b/css/swiper.css
@@ -1,6 +1,12 @@
 .swiper-slide {
   height: auto;
   padding: 4rem 1rem;
+  
+}
+
+.swiper-pagination-bullet {
+  width: 0.75rem;
+  height: 0.75rem;
 }
 
 .swiper-pagination-bullet-active {
