--- a/css/testimonials.css
+++ b/css/testimonials.css
@@ -54,7 +54,9 @@
     margin-right: auto;
   }
 
-  #testimonials .container header{
+  #testimonials header {
+    max-width: 32rem;
+    text-align: center;
     margin-left: auto;
     margin-right: auto;
   }
